2005-08-04  Mengjie Yu  <meng-jie.yu@sun.com>

	* text.c: (atk_text_interface_init),
	(html_a11y_text_get_run_attributes):
	Implement get_run_attributes function to inform atktools the attributes of the text.

	Fixes #312189


2005-07-06  Mengjie Yu  <meng-jie.yu@sun.com>

	* object.c: (gtk_html_a11y_insert_object_cb),
	(gtk_html_a11y_delete_object_cb), (gtk_html_a11y_new):
	We should pass the correct offset of the text instead of the absolute position
	of the whole document to the callback funtion.

	* text.c: (html_a11y_text_get_text_at_offset):
	We should assign the correct start_offset and end_offset and return the text content
	if start_slave or end_slave doesn't exist.

	Fixes #306238


2005-05-13  Changwoo Ryu  <cwryu@debian.org>

	* Makefile.am (INCLUDES): use I18N_LIB_CFLAGS.
	* html.c: include <glib/gi18n-lib.h> instead of <glib/gi18n.h> to
	specify the translation domain explicitly.
	* object.c: likewise.
	* image.c: likewise.
	* text.c: likewise.

	Fixes #301120

2005-04-07  Tor Lillqvist  <tml@novell.com>

	* utils.c: Remove inclusion of now nonexistent link.h.

2005-04-04  Yu Mengjie  <meng-jie.yu@sun.com>

	* Makefile.am:
	remove link.h link.c

	* hyperlink.c: (html_a11y_hyper_link_get_start_index),
	(html_a11y_hyper_link_get_end_index),
	(html_a11y_hyper_link_class_init), (html_a11y_hyper_link_new):
	overload the atk_hyperlink_get_start_index and atk_hyperlink_get_end_index
	function

	* hyperlink.h:
	add int num field indicating the number of links in a text object.

	* link.c:
	* link.h:
	remove link.c and link.h.

	* text.c: (html_a11y_text_get_type), (html_a11y_text_paste_text),
	(atk_hyper_text_interface_init), (html_a11y_text_get_link),
	(html_a11y_text_get_n_links), (html_a11y_text_get_link_index):
	implement atkhypertext interface.

	* utils.c: (create_accessible):
	remove related link part

	Fixes #74226

2005-03-01  Mengjie Yu  <meng-jie.yu@sun.com>

	* object.c: (gtk_html_a11y_new):we need to notify gnopernicus