@@ -1,3 +1,13 @@
+2005-08-10  Mengjie Yu  <meng-jie.yu@sun.com>
+
+	* text.c: (html_a11y_text_get_run_attributes):
+	Use html_text_prepare_attrs to get the PangoAttrList of a htmltext instead of
+	getting it directly from the htmltext object structure. The former's pango
+	infomation is more sufficient than the latter, e.g. the color of the link text,
+	the size and weight of the HEADER text.
+
+	Fixes #312189
+
 2005-08-04  Mengjie Yu  <meng-jie.yu@sun.com>
 
 	* text.c: (atk_text_interface_init),
